# pyvisgrid

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CITATION.cff  README.md  README.rst  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/_static/: switcher.json
docs/api-reference/core/: gridder.rst  index.rst  stokes.rst
docs/api-reference/plotting/: animations.rst  index.rst  plotting.rst
docs/changes/: 29.bugfix.rst  35.bugfix.rst  39.bugfix.rst  44.feature.rst  50.feature.rst  64.bugfix.rst  64.feature.rst  65.feature.rst  72.bugfix.rst  73.feature.rst
docs/developer-guide/: contributions.md  getting-started.md  style-guide.md
docs/user-guide/: getting-started.md
examples/: animation.ipynb
pyvisgrid/: __init__.py  _version.py  version.py
pyvisgrid/core/: gridder.py  stokes.py
pyvisgrid/plotting/: plotting.py
src/pyvisgrid/: __init__.py
src/pyvisgrid/core/: __init__.py  gridder.py  stokes.py
src/pyvisgrid/plotting/: __init__.py  animations.py  plotting.py
tests/: test_fits_gridding.py  test_ms_gridding.py  test_uvh5_gridding.py
tests/data/: test_model.fits  test_vis_dense.fits  test_vis_grid_ms.h5
