[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyvisgrid"
dynamic = ["version"]
description = " Grid and visualize observations of radio interferometers."
readme = "README.rst"
authors = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
maintainers = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"

dependencies = [
    "astropy>=6.1.0",
    "click>=8.2.1",
    "h5py>=3.14.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scipy>=1.15.3",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
pyvisgen = ["pyvisgen"]
casa = ["casatools"]


[dependency-groups]
tests = ["h5py", "pytest >= 7.0", "pytest-cov", "tomli"]
dev = ["pre-commit", "ipython", "jupyter", { include-group = "tests" }]

[project.urls]
repository = "https://github.com/radionets-project/pyvisgrid"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyvisgrid/_version.py"

[tool.hatch.build.targets.wheel]
include = ["src/pyvisgrid"]

[tool.hatch.build.targets.wheel.sources]
"src/pyvisgrid" = "pyvisgrid"

[project.entry-points.'pyvisgen.gridding']
gridder = "pyvisgrid.core.gridder:Gridder"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["B905"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pyvisgrid"]
